* change to 0.5 seconds of data default

Version 1.6
* Support change in difx input file format.

Version 1.5
* Produce .input files with multiple configs
* fix bug in merging -- files with multiple formats

Version 1.4
* Support(i.e. generate) full generic format types
* Allow .fx files without all listed antennas to work
* Fix nant>10 problem
* Copy spacecraft table

Version 1.3
* .flag file updates 

Version 1.2
* allmachines target
* TSYS=0.0 to drive non-scaled output

Version 1.1
* Restrict max num of EOP to 5 since calcif balks with more

Version 1.0
* Initial version

jobstatus
~~~~~~~~~
Version 1.0
* Initial version

calcif
~~~~~~
Version 1.5
* allow -a for globbing all .calc files or a list of files.
* don't rerun if unnecessary, unless -f is used

Version 1.2
* Handle CALC_SERVER env var, and command line value.
* Improved help info

Version 1.1
* Ignore more than 5 EOPs
* HACK -- make sure that "time" of data request is integer number of seconds.
      This is not the proper fix, but it works within the scope of the project.

Version 1.0
* Initial version

difxsniff
~~~~~~~~~
Version 1.0
* Initial version

vlog
~~~~
Version 1.0
* Initial version
Version 1.1
* Select net sideband based on sky freq

genmachines
~~~~~~~~~~~
Version 0.9
* genmachines2 is now genmachines
* the old genmachines is now genmachines.old and is not installed

Version 0.7
* Write meaningful, and correct, threads file
* settable verbosity and overheadcores

Version 0.6
* Much improved user interface, support more general machinesfile

Version 0.5
* First version in this package

jobdisks
~~~~~~~~
Version 1.0
* First version
Version 1.1
* Better help, support .fx files too

listmodules
~~~~~~~~~~~
Version 0.1
* First (rough but usable) version

listcpus
~~~~~~~~
Version 0.1
* First (rough but usable) version

startdifx
~~~~~~~~~
Version 0.1
* First version
Version 0.2
* Record execute time
* Fancier mpirun call
* Run calcif if necessary